# mcp-caldav-server

./: .coverage  .gitignore  README.md  pyproject.toml
config/: caldav.yaml
src/mcp_caldav/: __init__.py  cli.py  server.py
src/mcp_caldav/config/: load.py  models.py  validate.py
src/mcp_caldav/core/: __init__.py  access.py  auth.py  errors.py  ids.py  registry.py  session.py
src/mcp_caldav/providers/: base.py  caldav.py  compat.py
src/mcp_caldav/schemas/: __init__.py  common.py  tools.py
src/mcp_caldav/tools/: accounts.py  calendars.py  events.py  search.py
src/mcp_caldav/utils/: ical.py  time.py
src/mcp_caldav_server/: __init__.py
tests/: test_access.py  test_compat.py  test_config.py  test_provider.py  test_registry.py  test_session.py  test_tools.py
